syntax = "proto3";

package kuma.mesh.v1alpha1;

option go_package = "github.com/kumahq/kuma/api/mesh/v1alpha1";

import "mesh/v1alpha1/selector.proto";
import "google/protobuf/duration.proto";

message Timeout {

    // List of selectors to match dataplanes that are sources of traffic.
    repeated Selector sources = 1;

    // List of selectors to match services that are destinations of traffic.
    repeated Selector destinations = 2;

    message Conf {

        google.protobuf.Duration connect_timeout = 1;

        message Tcp {
            google.protobuf.Duration idle_timeout = 1;
        }
        Tcp tcp = 2;

        message Http {
            google.protobuf.Duration request_timeout = 1;
            google.protobuf.Duration idle_timeout = 2;
        }
        Http http = 3;

        message Grpc {
            google.protobuf.Duration stream_idle_timeout = 1;
            google.protobuf.Duration max_stream_duration = 2;
        }
        Grpc grpc = 4;
    }
    Conf conf = 3;
}
